--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@promptrepo/score",
-  "version": "5.3.1",
+  "version": "6.0.2",
   "description": "Calculate confidence scores for OpenAI JSON outputs",
   "type": "module",
   "main": "src/index.js",
@@ -13,11 +13,11 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
   "dependencies": {
-    "json-schema-generator": "^2.0.6",
-    "natural": "^6.10.4"
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "openai": "^4.77.0"
   },
   "engines": {
     "node": ">=14.0.0"
